# wk_2026_match_predictor

./: .gitignore  .mcp.json  CLAUDE.md  README.md  apm.lock.yaml  apm.yml  main.py  pyproject.toml
.dvc/: config
context/: ae-preferences.md  project.md  skill-state.md
data/interim/: .gitignore  elo_history.parquet.dvc  elo_wc2026.parquet.dvc  matches.parquet.dvc  squad_values.parquet.dvc  train_features.parquet.dvc  wc2026_features.parquet.dvc  wc2026_fixtures.parquet.dvc  wc2026_fixtures_live.parquet
data/predictions/: wc2026_predictions.csv  wc2026_predictions_20260614.csv  wc2026_predictions_20260628.csv  wc2026_title_probabilities_20260630.csv
data/processed/: .gitignore  eval_fold_2010.parquet.dvc  eval_fold_2014.parquet.dvc  eval_fold_2018.parquet.dvc  eval_fold_2022.parquet.dvc  eval_pooled.parquet.dvc  split_manifest.json.dvc  (+5 more)
notebooks/: 01_match_results_eda.ipynb  02_elo_ratings_eda.ipynb  03_wc2026_fixtures_results_eda.ipynb  04_fifa_rankings_spi_eda.ipynb  05_transfermarkt_eda.ipynb  06_player_ratings_eda.ipynb  08_train_test_split.ipynb  09_baseline_random.ipynb  10_baseline_elo_only.ipynb  11_baseline_poisson_glm.ipynb
reports/: data-quality-2026-06-12.md  eda-2026-06-12.md  feature-engineering-2026-06-13.md  goals-alignment-2026-06-12.md
research/: approach-shortlist-2026-06-12.md  approach-shortlist-2026-06-13.md  experiment-log.md  experiment-results-2026-06-13.md  experiment-results-2026-06-14.md  method-survey-2026-06-12.md  method-survey-2026-06-13.md  web-research-sweep-2026-06-17.md
scripts/: push_sporza.py
src/: sporza_client.py
(+34 files in other folders)
