[project]
name = "wk-2026-match-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=3,<4",
    "numpy>=2.0",
    "pandas>=2.2,<3",
    "penaltyblog>=1.11.0",
    "pyarrow>=14.0",
    "pymc>=5.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
